@@ -35,6 +35,7 @@ Mike Frysinger
 Robin Getz
 Stephane Glondu
 Christophe Grenier
+Øyvind Harboe
 Michael Hennerich
 Uwe Hermann
 Sebastian Hesselbarth
